Move JMX Trans recocniliation into a separate class (#6586)
Signed-off-by: Jakub Scholz <www@scholzj.com>